fix(Styling): OZF-902 Create/edit form hiding behind lower classification banner

--- a/app/styles/_create-edit.scss
+++ b/app/styles/_create-edit.scss
@@ -17,6 +17,8 @@
 .CreateEdit__form {
     padding-top: 200px;
 
+    margin-bottom: 20px;
+
     label.input-optional::after {
         content: " (optional)";
         font-size: smaller;
