--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -214,8 +214,9 @@ div.modal-header > button.close {
 =======================*/
 @import "../../bower_components/ozp-classification/classification.css";
 
-body{
+#main {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 body > div.classBanner:first-of-type {
     position: fixed;
